# Soil-Moisture-Analysis

./: README.md  pyproject.toml
jupyter/: programming_task.ipynb
