[project]
name = ""
version = ""
description = ""
authors = [
    {name = "IoannisGkanatsios", email = "ioannisgkan259@gmail.com"},
]
dependencies = [
    "jupyterlab>=4.0.3",
    "numpy>=1.24.4",
    "xarray>=2023.1.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pandas>=2.0.3",
    "geopandas>=0.13.2",
    "h5netcdf>=1.1.0",
    "pooch>=1.7.0",
    "cartopy>=0.21.1",
    "rioxarray>=0.13.4",
    "contextily>=1.3.0",
    "basemap>=1.3.7",
    "dask>=2023.5.0",
    "scipy>=1.9.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}


[tool.pdm]
